# encelado

./: .clang-format  .gitignore  CMakeLists.txt
cambrian/: CMakeLists.txt  CambrianCommon.h  TypeRegistry.cpp  TypeRegistry.h  cambrian_common.h
cambrian/data/: directory.cpp  directory.h  passive_type.cpp  passive_type.h  path.h  serializer.cpp  serializer.h  type_registry.cpp  type_registry.h
cambrian/storage/: file_device.cpp  file_device.h  memory_device.cpp  memory_device.h  storage_device.h
cambrian/vs2017/: cambrian.vcxproj  cambrian.vcxproj.filters
ediacaran/: CMakeLists.txt
ediacaran/code_blocks/: ediacaran.cbp  ediacaran.cbp.save  ediacaran.depend  ediacaran.layout  ediacaran.layout.save
ediacaran/core/: address.h  array.h  array.h.save  array_view.h  byte_reader.cpp  byte_reader.h  byte_writer.cpp  byte_writer.h  char_reader.cpp  char_reader.h  char_writer.cpp  char_writer.h  char_writer.h.save  comma_separated_names.h  constexpr_string.h  ediacaran_common.h  ediacaran_common.h.save  expected.h  remove_noexcept.h  string_builder.cpp  string_builder.h  string_utils.h  type_list.h
ediacaran/reflection/: action.h  class_template_specialization.h  class_type.h  container.h  cv_qualification.h  enum_type.h  function.h  get_type.h  namespace.cpp  namespace.h  parameter.h  property.h  qualified_type_ptr.cpp  qualified_type_ptr.h  qualified_type_ptr.inl  reflection.h  special_functions.h  std_containers_reflection.h  type.h
ediacaran/reflection/detail/: class_reflection.h  container_reflection.h  enum_reflection.h  function_accessor.h
ediacaran/std_refl/: allocator.h  list.h  string.h  vector.h
ediacaran/utils/: dyn_value.cpp  dyn_value.h  inspect.cpp  inspect.h  iterator.cpp  iterator.h  raw_ptr.cpp  raw_ptr.h  universal_iterator.cpp  universal_iterator.h
ediacaran/vs2017/: ediacaran.vcxproj  ediacaran.vcxproj.filters
scripts/: test.sh
silurian/: engine.cpp  engine.h
silurian/vs2017/: silurian.sln  silurian.vcxproj  silurian.vcxproj.filters
test/: cambrian.cpp  common.h  ediacaran.cpp  main.cpp
test/cambrian/: common_tests.cpp  hash_tests.cpp  iliade.h
test/code_blocks/: default.workspace.layout  main.cpp  test.cbp  test.cbp.save  test.depend  test.layout  test.layout.save
test/ediacaran/: animalia.cpp  class_templates_tests.cpp  class_tests.cpp  container_tests.cpp  qualified_type_ptr_tests.cpp  remove_noexcept_tests.cpp  string_tests.cpp  type_list_tests.cpp  type_tests.cpp  type_tests.cpp.save
test/vs2017/: tests.sln  tests.vcxproj  tests.vcxproj.filters
tests/: CMakeLists.txt  cambrian.cpp  common.h  main.cpp
tests/cambrian/: common_tests.cpp
tests/cambrian/serialization/: test_types.cpp  test_types.h  tests.cpp
tests/code_blocks/: default.workspace  test.layout
tests/ediacaran/: animalia.cpp  class_templates_tests.cpp  class_tests.cpp  container_tests.cpp  qualified_type_ptr_tests.cpp  remove_noexcept_tests.cpp  string_tests.cpp  type_list_tests.cpp  type_tests.cpp
tests/vs2017/: tests.vcxproj  tests.vcxproj.filters
tests/vulkanic/: main.cpp
tests/vulkanic/vulkanic_test/: vulkanic_test.vcxproj
vulkanic/: device.cpp  device.h  gpu_allocator.cpp  gpu_allocator.h  handle.h  instance.cpp  instance.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  vulkanic.h
vulkanic/vs2017/: vulkanic.vcxproj  vulkanic.vcxproj.filters
