cmake_minimum_required(VERSION 3.9)
project(encelado)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)

set (CMAKE_CXX_FLAGS "-fno-elide-constructors -Wall -Wextra -Wno-invalid-offsetof")

add_executable(encelado
        cambrian/data/directory.cpp
        cambrian/data/directory.h
        cambrian/data/path.cpp
        cambrian/data/path.h
        cambrian/storage/file_device.cpp
        cambrian/storage/file_device.h
        cambrian/storage/memory_device.cpp
        cambrian/storage/memory_device.h
        cambrian/storage/storage_device.cpp
        cambrian/storage/storage_device.h
        cambrian/cambrian_common.h
        cambrian/TypeRegistry.cpp
        cambrian/TypeRegistry.h
        ediacaran/core/address.h
        ediacaran/core/array.h
        ediacaran/core/array_view.h
        ediacaran/core/char_reader.cpp
        ediacaran/core/char_reader.h
        ediacaran/core/char_writer.cpp
        ediacaran/core/char_writer.h
        ediacaran/core/comma_separated_names.h
        ediacaran/core/constexpr_string.h
        ediacaran/core/ediacaran_common.h
        ediacaran/core/expected.h
        ediacaran/core/remove_noexcept.h
        ediacaran/core/string_builder.cpp
        ediacaran/core/string_builder.h
        ediacaran/core/string_utils.h
        ediacaran/core/type_list.h
        ediacaran/reflection/detail/class_reflection.h
        ediacaran/reflection/detail/container_reflection.h
        ediacaran/reflection/detail/enum_reflection.h
        ediacaran/reflection/detail/function_accessor.h
        ediacaran/reflection/class_template_specialization.h
        ediacaran/reflection/class_type.h
        ediacaran/reflection/container.h
        ediacaran/reflection/cv_qualification.h
        ediacaran/reflection/enum_type.h
        ediacaran/reflection/function.h
        ediacaran/reflection/namespace.cpp
        ediacaran/reflection/namespace.h
        ediacaran/reflection/parameter.h
        ediacaran/reflection/property.h
        ediacaran/reflection/qualified_type_ptr.cpp
        ediacaran/reflection/qualified_type_ptr.h
        ediacaran/reflection/reflection.h
        ediacaran/reflection/special_functions.h
        ediacaran/reflection/type.h
        ediacaran/std_refl/allocator.h
        ediacaran/std_refl/string.h
        ediacaran/std_refl/vector.h
        ediacaran/utils/dyn_value.cpp
        ediacaran/utils/dyn_value.h
        ediacaran/utils/inspect.cpp
        ediacaran/utils/inspect.h
        ediacaran/utils/raw_ptr.cpp
        ediacaran/utils/raw_ptr.h
        ediacaran/utils/universal_iterator.cpp
        ediacaran/utils/universal_iterator.h
        test/cambrian/common_tests.cpp
        test/cambrian/iliade.h
        test/ediacaran/animalia.cpp
        test/ediacaran/class_templates_tests.cpp
        test/ediacaran/class_tests.cpp
        test/ediacaran/container_tests.cpp
        test/ediacaran/qualified_type_ptr_tests.cpp
        test/ediacaran/remove_noexcept_tests.cpp
        test/ediacaran/string_tests.cpp
        test/ediacaran/type_list_tests.cpp
        test/ediacaran/type_tests.cpp
        test/cambrian.cpp
        test/common.h
        test/main.cpp)
